--- a/Moon_eqc_gggrx_1200a_anom_l420.eq/config.json
+++ b/Moon_eqc_gggrx_1200a_anom_l420.eq/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "GRAIL LGRS, Gravity Anomalies L420",
+    "Title": "月球重力场重力异常图,420阶(GRAIL LGRS, Gravity Anomalies L420)",
     "LayerID": "Moon_eqc_gggrx_1200a_anom_l420.eq",
     "Icon": "{MoonImage}\\Moon_eqc_gggrx_1200a_anom_l420.eq\\gggrx_1200a_anom_l420.eq-120.png",
     "BBOX": [
