--- a/Moon_eqc_gggrx_1200a_anomerr_l180.eq/config.json
+++ b/Moon_eqc_gggrx_1200a_anomerr_l180.eq/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "GRAIL LGRS, Gravity Anomaly Errors L180",
+    "Title": "月球重力场重力异常误差图,误差到180阶GRAIL LGRS, Gravity Anomaly Errors L180",
     "LayerID": "Moon_eqc_gggrx_1200a_anomerr_l180.eq",
     "Icon": "{MoonImage}\\Moon_eqc_gggrx_1200a_anomerr_l180.eq\\gggrx_1200a_anomerr_l180.eq-120.png",
     "BBOX": [
