--- a/Moon_eqc_gggrx_1200a_boug_l660.eq/config.json
+++ b/Moon_eqc_gggrx_1200a_boug_l660.eq/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "GRAIL LGRS, Bouguer Disturbances L660",
+    "Title": "月球重力场布格扰动图,660阶(GRAIL LGRS, Bouguer Disturbances L660)",
     "LayerID": "Moon_eqc_gggrx_1200a_boug_l660.eq",
     "Icon": "{MoonImage}\\Moon_eqc_gggrx_1200a_boug_l660.eq\\gggrx_1200a_boug_l660.eq-120.png",
     "BBOX": [
