--- a/Moon_eqc_gggrx_1200a_dist_l180.eq/config.json
+++ b/Moon_eqc_gggrx_1200a_dist_l180.eq/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType":"EQ",
-    "Title":"全月引力场分布",
+    "Title":"月球重力场的重力扰动图,180阶(LGRS, Gravity Disturbances L180)",
     "LayerID":"Moon_eqc_gggrx_1200a_dist_l180.eq",
     "Icon":"{MoonImage}\\Moon_eqc_gggrx_1200a_dist_l180.eq\\gggrx_1200a_dist_l180.eq-120.png",
     "BBOX":[-180,-90,180,90],
