--- a/Moon_eqc_gggrx_1200a_dist_l900.eq/config.json
+++ b/Moon_eqc_gggrx_1200a_dist_l900.eq/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "GRAIL LGRS, Gravity Disturbances L900",
+    "Title": "月球重力场的重力扰动图,900阶(GRAIL LGRS, Gravity Disturbances L900)",
     "LayerID": "Moon_eqc_gggrx_1200a_dist_l900.eq",
     "Icon": "{MoonImage}\\Moon_eqc_gggrx_1200a_dist_l900.eq\\gggrx_1200a_dist_l900.eq-120.png",
     "BBOX": [
