--- a/Moon_eqc_LO_HRMR_Mosaic_Global_512ppd/config.json
+++ b/Moon_eqc_LO_HRMR_Mosaic_Global_512ppd/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LO HR/MR Cam Image Mosaic",
+    "Title": "全月中分辨率影像,1966轨道器(LO HR/MR Cam Image Mosaic)",
     "LayerID": "Moon_eqc_LO_HRMR_Mosaic_Global_512ppd",
     "Icon": "{MoonImage}\\Moon_eqc_LO_HRMR_Mosaic_Global_512ppd\\LO_HRMR_Mosaic_Global_512ppd-120.png",
     "BBOX": [
@@ -9,7 +9,7 @@
         180.0,
         90.0
     ],
-    "Abstract": "1966年，美国发射了五次月球轨道飞行器任务",
+    "Abstract": "1966年，美国发射了五次月球轨道飞行器任务1967年研究月球。月球轨道飞行器的图像是摄影产品在这五次飞行任务中（LO-I至-V；汉森，1970年；Bowker和Hughes，1971）。绘制的前三个任务潜在的阿波罗登月地点。月球轨道飞行器四号拍摄最多月球近侧和远侧的中分辨率和高分辨率。",
     "Projection": "GEOGCS[,\n\tDATUM['unknown', SPHEROID['unnamed',1737400,0]], \n\tPRIMEM['Greenwich',0], UNIT['degree',0.0174532925199433]]\n",
     "Preview": "{MoonImage}\\Moon_eqc_LO_HRMR_Mosaic_Global_512ppd\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_LO_HRMR_Mosaic_Global_512ppd\\WMTSCapabilities.xml",
