--- a/Moon_eqc_LP_GRS_ClrTitaniumAbundance_2ppd/config.json
+++ b/Moon_eqc_LP_GRS_ClrTitaniumAbundance_2ppd/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LP GRS Color Ti Abundance 2ppd, Global",
+    "Title": "LP 伽马射线光谱仪,钛元素风度彩图(LP GRS Color Ti Abundance 2ppd, Global)",
     "LayerID": "Moon_eqc_LP_GRS_ClrTitaniumAbundance_2ppd",
     "Icon": "{MoonImage}\\Moon_eqc_LP_GRS_ClrTitaniumAbundance_2ppd\\LP_GRS_ClrTitaniumAbundance_2ppd-120.png",
     "BBOX": [
