--- a/Moon_eqc_LRO_Diviner_ST_Avg_Gray_Global_32ppd/config.json
+++ b/Moon_eqc_LRO_Diviner_ST_Avg_Gray_Global_32ppd/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO DLRE Surface Temp Avg, Gray",
+    "Title": "全月平均月表温度(LRO DLRE Surface Temp Avg, Gray)",
     "LayerID": "Moon_eqc_LRO_Diviner_ST_Avg_Gray_Global_32ppd",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_Diviner_ST_Avg_Gray_Global_32ppd\\LRO_Diviner_ST_Avg_Gray_Global_32ppd-120.png",
     "BBOX": [
