--- a/Moon_eqc_LRO_NAC_ClrShade_07N301E_2mp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_07N301E_2mp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Reiner Gamma, ColorHillshade",
+    "Title": "赖纳尔伽玛地形山体阴影彩图(LRO LROC DEM, Reiner Gamma, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_07N301E_2mp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_07N301E_2mp\\LRO_NAC_ClrShade_07N301E_2mp-120.png",
     "BBOX": [
