--- a/Moon_eqc_LRO_NAC_ClrShade_09S015E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_09S015E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Apollo 16, ColorHillshade",
+    "Title": "Apollo 16 区域地形山体阴影彩图(LRO LROC DEM, Apollo 16, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_09S015E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_09S015E_150cmp\\LRO_NAC_ClrShade_09S015E_150cmp-120.png",
     "BBOX": [
