--- a/Moon_eqc_LRO_NAC_ClrShade_13S358E_200cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_13S358E_200cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Alphonsus, ColorHillshade",
+    "Title": "阿方索斯陨石坑地形山体阴影彩图(LRO LROC DEM, Alphonsus, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_13S358E_200cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_13S358E_200cmp\\LRO_NAC_ClrShade_13S358E_200cmp-120.png",
     "BBOX": [
