--- a/Moon_eqc_LRO_NAC_ClrShade_17S173E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_17S173E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Aitken Crater, ColorHillshade",
+    "Title": "爱肯特盆地山体阴影彩图(LRO LROC DEM, Aitken Crater, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_17S173E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_17S173E_150cmp\\LRO_NAC_ClrShade_17S173E_150cmp-120.png",
     "BBOX": [
