--- a/Moon_eqc_LRO_NAC_ClrShade_20S337E_400cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_20S337E_400cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Bullialdus Crater, ColorHillshade",
+    "Title": "布利亚杜斯陨石坑地形山体阴影彩图(LRO LROC DEM, Bullialdus Crater, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_20S337E_400cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_20S337E_400cmp\\LRO_NAC_ClrShade_20S337E_400cmp-120.png",
     "BBOX": [
