--- a/Moon_eqc_LRO_NAC_ClrShade_26N004E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_26N004E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Apollo 15, ColorHillshade",
+    "Title": "Apollo 15 区域地形山体阴影彩图(LRO LROC DEM, Apollo 15, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_26N004E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_26N004E_150cmp\\LRO_NAC_ClrShade_26N004E_150cmp-120.png",
     "BBOX": [
