--- a/Moon_eqc_LRO_NAC_ClrShade_26S265E_200cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_26S265E_200cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Orientale 1, ColorHillshade",
+    "Title": "东海地形山体阴影彩图(LRO LROC DEM, Orientale 1, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_26S265E_200cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_26S265E_200cmp\\LRO_NAC_ClrShade_26S265E_200cmp-120.png",
     "BBOX": [
