--- a/Moon_eqc_LRO_NAC_ClrShade_27N318E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_27N318E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Rimae Prinz, ColorHillshade",
+    "Title": "普林茨溪地形山体阴影彩图(LRO LROC DEM, Rimae Prinz, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_27N318E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_27N318E_150cmp\\LRO_NAC_ClrShade_27N318E_150cmp-120.png",
     "BBOX": [
