--- a/Moon_eqc_LRO_NAC_ClrShade_28N307E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_28N307E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Aristarchus 2, ColorHillshade",
+    "Title": "阿利斯塔克环形山2 地形山体阴影彩图(LRO LROC DEM, Aristarchus 2, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_28N307E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_28N307E_150cmp\\LRO_NAC_ClrShade_28N307E_150cmp-120.png",
     "BBOX": [
