--- a/Moon_eqc_LRO_NAC_ClrShade_51S171E_2mp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_51S171E_2mp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, South Pole-Aitken Rim, ColorHillshade",
+    "Title": "艾肯特地形山体阴影彩图(LRO LROC DEM, South Pole-Aitken Rim, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_51S171E_2mp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_51S171E_2mp\\LRO_NAC_ClrShade_51S171E_2mp-120.png",
     "BBOX": [
