--- a/Moon_eqc_LRO_NAC_ClrShade_53N354E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_53N354E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Plato Ejecta, ColorHillshade",
+    "Title": "柏拉图地形山体阴影彩图(LRO LROC DEM, Plato Ejecta, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_53N354E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_53N354E_150cmp\\LRO_NAC_ClrShade_53N354E_150cmp-120.png",
     "BBOX": [
