--- a/Moon_eqc_LRO_NAC_ClrShade_60S200E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrShade_60S200E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, South Pole-Aitken Basin Interior, ColorHillshade",
+    "Title": "艾特肯盆地内部地形山体阴影彩图(LRO LROC DEM, South Pole-Aitken Basin Interior, ColorHillshade)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrShade_60S200E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrShade_60S200E_150cmp\\LRO_NAC_ClrShade_60S200E_150cmp-120.png",
     "BBOX": [
