--- a/Moon_eqc_LRO_NAC_ClrSlope_15m_10N58E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrSlope_15m_10N58E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Mare Crisium, 15m Color Slope",
+    "Title": "危海地形坡度彩图(LRO LROC DEM, Mare Crisium, 15m Color Slope)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrSlope_15m_10N58E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrSlope_15m_10N58E_150cmp\\LRO_NAC_ClrSlope_15m_10N58E_150cmp-120.png",
     "BBOX": [
