--- a/Moon_eqc_LRO_NAC_ClrSlope_15m_20N010E_2mp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrSlope_15m_20N010E_2mp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Sulpicius Gallus, 15m Color Slope",
+    "Title": "苏尔皮西乌斯·加卢斯陨石坑地形坡度彩图(LRO LROC DEM, Sulpicius Gallus, 15m Color Slope)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrSlope_15m_20N010E_2mp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrSlope_15m_20N010E_2mp\\LRO_NAC_ClrSlope_15m_20N010E_2mp-120.png",
     "BBOX": [
