--- a/Moon_eqc_LRO_NAC_ClrSlope_3m_02S167E_150cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrSlope_3m_02S167E_150cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Stratton (Dewar) High Fe Anomaly, 3m Color Slope",
+    "Title": "斯特拉顿环形山(杜瓦)地形坡度彩图(LRO LROC DEM, Stratton (Dewar) High Fe Anomaly, 3m Color Slope)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrSlope_3m_02S167E_150cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrSlope_3m_02S167E_150cmp\\LRO_NAC_ClrSlope_3m_02S167E_150cmp-120.png",
     "BBOX": [
