--- a/Moon_eqc_LRO_NAC_ClrSlope_4m_13S358E_2mp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrSlope_4m_13S358E_2mp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Alphonsus Crater, 4m Color Slope",
+    "Title": "阿方索斯陨石坑地形(LRO LROC DEM, Alphonsus Crater, 4m Color Slope)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrSlope_4m_13S358E_2mp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrSlope_4m_13S358E_2mp\\LRO_NAC_ClrSlope_4m_13S358E_2mp-120.png",
     "BBOX": [
