--- a/Moon_eqc_LRO_NAC_ClrSlope_8m_20S337E_400cmp/config.json
+++ b/Moon_eqc_LRO_NAC_ClrSlope_8m_20S337E_400cmp/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO LROC DEM, Bullialdus Crater, 8m Color Slope",
+    "Title": "布利亚杜斯陨石坑地形坡度彩图(LRO LROC DEM, Bullialdus Crater, 8m Color Slope)",
     "LayerID": "Moon_eqc_LRO_NAC_ClrSlope_8m_20S337E_400cmp",
     "Icon": "{MoonImage}\\Moon_eqc_LRO_NAC_ClrSlope_8m_20S337E_400cmp\\LRO_NAC_ClrSlope_8m_20S337E_400cmp-120.png",
     "BBOX": [
